--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -29,6 +29,7 @@ p {
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
+  align-items: center;
 }
 #logo {
   display: flex;
@@ -49,4 +50,57 @@ p {
   height: 16px;
   padding-top: 17px;
   padding-right: 2px;
+}
+#searchBarFlex {
+  display: flex;
+  outline: 2px solid transparent;
+  transition: border 0.3s;
+}
+.searchBarComponent {
+  height: 42px;
+}
+#searchFilter {
+  width: 115px;
+  background-color: #e6e6e6;
+  border-radius: 4px 0px 0px 4px;
+}
+#searchFilter:focus {
+  outline: none;
+}
+#searchBar {
+  width: 480px;
+}
+#searchbar:focus {
+  outline: none;
+}
+#searchBarLeft {
+}
+#searchBarLeft:focus {
+  outline: 2px solid orange;
+}
+#searchBarCenter {
+  cursor: pointer;
+}
+#searchBarCenter:hover + #searchBarFlex {
+  outline: 2px solid orange;
+}
+#searchBarRight {
+  background-color: #febd69;
+  width: 40px;
+  border-radius: 0px 4px 4px 0px;
+}
+#searchBarRight:hover {
+  outline: 2px solid orange;
+}
+#searchIcon {
+  height: 30px;
+  padding-top: 3px;
+  padding-left: 4px;
+}
+select {
+  color: grey;
+  padding-left: 5px;
+}
+option {
+  color: black;
 }
