--- a/src/components/product_cards/css/MultipleCard.css
+++ b/src/components/product_cards/css/MultipleCard.css
@@ -1,4 +1,4 @@
-.productImage {
+.mc_productImage {
   background-color: #f7f7f7;
   height: 130px;
   width: 130px;
@@ -6,10 +6,10 @@
   justify-content: center;
   align-items: center;
 }
-img {
+.mc_img {
   height: 90%;
 }
-#multipleCard {
+#mc {
   background-color: white;
   padding: 20px;
   /* border-radius: 20px; */
@@ -18,28 +18,28 @@ img {
   height: fit-content;
   width: fit-content;
 }
-#productsGrid {
+#mc_productsGrid {
   display: grid;
   grid-template-columns: auto auto;
   gap: 7px;
 }
-.productTitle {
+.mc_productTitle {
   color: black;
   font-size: 15px;
   padding: 4px;
   text-align: left;
 }
-#cardTitle {
+#mc_cardTitle {
   font-size: 23px;
   color: black;
   padding-bottom: 7px;
 }
-#multipleCard a {
+#mc a {
   text-decoration: none;
   font-size: 13px;
   color: #007185;
 }
-#multipleCard > a:hover {
+#mc > a:hover {
   text-decoration: underline;
   color: #f08804;
 }
