--- a/src/components/css/ProductsList.css
+++ b/src/components/css/ProductsList.css
@@ -1,4 +1,4 @@
-#productsListDiv {
+#productsListExpanded {
   background-color: white;
   width: 100%;
   height: fit-content;
@@ -7,10 +7,13 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+#productsListDiv {
+  margin-left: 70px;
+  margin-right: 70px;
+  overflow: hidden;
+}
 #productsList {
   display: flex;
-  padding-left: 70px;
-  padding-right: 70px;
 }
 .scrollBtn {
   background-color: white;
