--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -1,3 +1,53 @@
 body {
   background-color: #e6e6e6;
 }
+.banner-image {
+  width: 100%;
+}
+#banner-slider {
+  position: relative;
+  top: 0;
+  display: flex;
+  align-items: center;
+}
+#banner-flex {
+  display: flex;
+  background: linear-gradient(on bottom, white, white);
+  background-color: #007185;
+}
+#banner-gradient {
+  /* background-color: #007185; */
+  height: 60%;
+  width: 200%;
+  position: absolute;
+  left: -150px;
+  bottom: 0;
+  box-shadow: inset 0px -240px 90px -6px #e6e6e6;
+}
+.banner-btn {
+  height: 50%;
+  width: 80px;
+  background-color: transparent;
+  border: 0;
+  border-radius: 5px;
+}
+.banner-btn:focus {
+  outline: 2px solid white;
+  border: 2px solid #007185;
+}
+.banner-btn p {
+  color: white;
+  font-size: 40px;
+}
+#left.banner-btn {
+  position: absolute;
+  top: 0;
+  left: 2px;
+  text-shadow: -5.5px 0px 0px black;
+}
+#right.banner-btn {
+  position: absolute;
+  top: 0;
+  right: 2px;
+  text-shadow: 5.5px 0px 0px black;
+}
