--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -22,6 +22,9 @@
   font-weight: bold;
 }
 #header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   display: flex;
   background-color: #131921;
   padding-left: 15px;
