--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -14,6 +14,8 @@
   padding: 5px;
   user-select: none;
   cursor: pointer;
+  background-color: #232f3e;
+  border: none;
 }
 #allSlider:hover {
   outline: 2px solid white;
@@ -37,4 +39,47 @@
 .navLink {
   user-select: none;
   text-decoration: none;
+}
+#nb-sliderDiv {
+  background-color: white;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  height: 100%;
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.473);
+}
+#nb-sliderDiv-user {
+  display: flex;
+  background-color: #232f3e;
+  align-items: center;
+  gap: 10px;
+  padding: 15px 170px 15px 30px;
+}
+#nb-sliderDiv-user img {
+  height: 28px;
+}
+#nb-sliderDiv-user p {
+  font-weight: bold;
+  font-size: 20px;
+}
+#nb-sliderDiv-background {
+  background-color: rgba(0, 0, 0, 0.719);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  border: 0;
+}
+#nb-sliderDiv-closeBtn {
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  top: 15px;
+  left: 375px;
+  color: white;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 28px;
 }
