added contents into all-slider

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -2,10 +2,8 @@
   margin: 0;
 }
 .component {
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 0px 10px;
+  height: 100%;
   cursor: pointer;
 }
 .component:hover {
@@ -15,10 +13,12 @@
   color: white;
 }
 .thin {
-  font-size: 13px;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.377);
+  font-family: sans-serif;
 }
 .bold {
-  font-size: 15px;
+  font-size: 16px;
   font-weight: bold;
 }
 #header {
@@ -26,15 +26,15 @@
   top: 0;
   z-index: 1;
   display: flex;
+  gap: 6px;
   background-color: #131921;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 5px 15px;
   align-items: center;
+  height: 50px;
 }
 #logo {
   display: flex;
+  align-items: center;
 }
 #logoImage {
   height: 38px;
@@ -46,12 +46,13 @@
 #location {
   display: grid;
   grid-template-columns: auto auto;
+  column-gap: 2px;
+  align-items: center;
 }
 #locationIcon {
   grid-row: 1 / span 2;
   height: 16px;
-  padding-top: 17px;
-  padding-right: 2px;
+  padding-top: 14px;
 }
 #searchBarFlex {
   display: flex;
@@ -105,4 +106,13 @@ select {
 }
 option {
   color: black;
+}
+#h-lang {
+  display: flex;
+  gap: 5px;
+  font-weight: bold;
+  align-items: center;
+}
+#h-lang img {
+  height: 14px;
 }
