--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -116,3 +116,8 @@ option {
 #h-lang img {
   height: 14px;
 }
+#h-lang-selector {
+  width: 20px;
+  background-color: transparent;
+  border: none;
+}
