--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -68,7 +68,7 @@
   height: 42px;
 }
 #searchFilter {
-  width: 115px;
+  width: fit-content;
   background-color: #e6e6e6;
   border-radius: 4px 0px 0px 4px;
   cursor: pointer;
@@ -83,6 +83,7 @@
   outline: none;
 }
 #searchBarLeft {
+  display: flex;
 }
 #searchBarLeft:focus {
   outline: 2px solid orange;
@@ -95,12 +96,15 @@
   outline: 2px solid orange;
 }
 #searchBarRight {
+  display: flex;
+}
+#searchBarRight div {
   background-color: #febd69;
   width: 40px;
   border-radius: 0px 4px 4px 0px;
   cursor: pointer;
 }
-#searchBarRight:hover {
+#searchBarRight div:hover {
   outline: 2px solid orange;
 }
 #searchIcon {
@@ -111,6 +115,7 @@
 select {
   color: grey;
   padding-left: 5px;
+  width: 200px;
 }
 option {
   color: black;
@@ -153,13 +158,31 @@ option {
 #cart {
   display: flex;
   align-items: center;
+  position: sticky;
+  text-decoration: none;
 }
 #cart img {
   height: 35px;
 }
 #cart p {
-  /* font-size: large; */
   margin-top: auto;
   margin-bottom: 5px;
   margin-left: 1px;
+}
+#priceFilter {
+  width: fit-content;
+  background-color: #e6e6e6;
+  cursor: pointer;
+}
+#priceFilter:focus {
+  outline: none;
+}
+#cart-number {
+  position: absolute;
+  right: 12px;
+  bottom: 5px;
+  font-size: 24px;
+}
+#cart div {
+  position: relative;
 }
