--- a/src/pages/css/Product.css
+++ b/src/pages/css/Product.css
@@ -157,7 +157,7 @@ a {
   gap: 7px;
   padding-right: 10px;
 }
-#md-view {
+.md-view {
   height: 45px;
   width: 45px;
   border: 1px solid rgba(0, 0, 0, 0.534);
@@ -167,13 +167,13 @@ a {
   justify-content: center;
   align-items: center;
 }
-#md-view img {
+.md-view img {
   height: 100%;
   width: max-content;
   max-width: 100%;
   border-radius: inherit;
 }
-#md-view:hover {
+.md-view:hover {
   box-shadow: 0px 0px 3px 1px #007185;
 }
 #md-specsDiv {
