--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -115,3 +115,8 @@
 .nb-slider-content p {
   padding: 10px 0 10px 35px;
 }
+@media screen and (max-width: 500px) {
+  .navLink {
+    display: none;
+  }
+}
