--- a/src/pages/css/Product.css
+++ b/src/pages/css/Product.css
@@ -5,7 +5,7 @@
   display: flex;
 }
 #p-pc {
-  padding: 20px 17px;
+  padding: 20px 0 20px 17px;
 }
 #p-pc ul {
   font-family: sans-serif;
@@ -18,6 +18,8 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 100%;
+  margin-right: 20px;
 }
 #md-details a {
   color: #007185;
@@ -72,12 +74,14 @@
   display: flex;
   gap: 10px;
   height: min-content;
+  flex-wrap: wrap;
 }
 #md-curr-view {
   margin-right: 13px;
 }
 #md-curr-view img {
-  width: 450px;
+  max-width: 500px;
+  width: 100%;
 }
 .md-offerCard {
   box-shadow: 0px 0px 6px 0px rgb(163, 163, 163);
@@ -95,10 +99,9 @@ a {
   border-radius: 8px;
   display: flex;
   flex-direction: column;
-  width: 920px;
-  margin: 20px 0px 0px 20px;
   padding: 15px;
   gap: 7px;
+  margin-bottom: 10px;
 }
 #add-to-cart-btn {
   background-color: #ffd814;
@@ -144,6 +147,7 @@ a {
   text-align: center;
   gap: 25px;
   margin: 10px 0px;
+  flex-wrap: wrap;
 }
 #md-icon img {
   height: 40px;
@@ -156,6 +160,7 @@ a {
   flex-direction: column;
   gap: 7px;
   padding-right: 10px;
+  flex-wrap: wrap;
 }
 .md-view {
   height: 45px;
@@ -192,4 +197,35 @@ a {
 }
 #p-pc > hr {
   margin-top: 20px;
+}
+#buy-card-1 {
+  width: 100%;
+  margin-right: 17px;
+}
+#buy-card-2 {
+  display: none;
+}
+@media screen and (max-width: 1180px) {
+  #buy-card-1 {
+    display: none;
+  }
+  #buy-card-2 {
+    display: block;
+  }
+}
+@media screen and (max-width: 840px) {
+  #pc-md {
+    flex-wrap: wrap;
+  }
+  #md-curr-view {
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 420px) {
+  #pc-md #pc-md-div {
+    flex-wrap: wrap;
+  }
+  #md-views-flex {
+    flex-direction: row;
+  }
 }
