--- a/src/pages/css/Product.css
+++ b/src/pages/css/Product.css
@@ -78,6 +78,7 @@
 }
 #md-curr-view {
   margin-right: 13px;
+  padding-bottom: 20px;
 }
 #md-curr-view img {
   max-width: 500px;
@@ -221,11 +222,19 @@ a {
     margin: 0 auto;
   }
 }
+@media screen and (max-width: 600px) {
+  #md-curr-view {
+    padding-right: 20px;
+  }
+}
 @media screen and (max-width: 420px) {
   #pc-md #pc-md-div {
     flex-wrap: wrap;
   }
   #md-views-flex {
     flex-direction: row;
+  }
+  #md-curr-view {
+    padding-top: 10px;
   }
 }
